--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "animal-recognition",
+  "name": "national-park-passport",
   "version": "1.0.0",
-  "description": "Animal Recognition",
+  "description": "National Park Passport",
   "main": "server/index.js",
   "scripts": {
     "test": "",
@@ -12,17 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/huongtran1993/animal-recognition.git"
+    "url": "git+https://github.com/huongtran1993/national-park-passport.git"
   },
   "author": "Huong Nguyen",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/huongtran1993/animal-recognition/issues"
+    "url": "https://github.com/huongtran1993/national-park-passport/issues"
   },
-  "homepage": "https://github.com/huongtran1993/animal-recognition#readme",
+  "homepage": "https://github.com/huongtran1993/national-park-passport#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.9.0",
-    "@tensorflow/tfjs-node": "^3.9.0",
     "axios": "^0.21.4",
     "babel-loader": "^8.2.2",
     "compression": "^1.7.4",
@@ -35,8 +33,6 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^9.0.0",
