--- a/package.json
+++ b/package.json
@@ -21,12 +21,20 @@
   },
   "homepage": "https://github.com/huongtran1993/national-park-passport#readme",
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
     "axios": "^0.21.4",
     "babel-loader": "^8.2.2",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-usa-map": "^1.5.0",
     "webpack": "^5.52.0"
   },
   "devDependencies": {
