--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "axios": "^0.21.4",
     "babel-loader": "^8.2.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
+    "firebase": "^9.1.2",
+    "firebase-admin": "^9.12.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-core": "^7.0.0-bridge.0",
