--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "express": "^4.17.1",
     "firebase": "^9.1.2",
     "firebase-admin": "^9.12.0",
-    "pg": "^8.7.1",
+    "mongoose": "^6.0.10",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
