--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
+    "@react-spring/parallax": "^9.3.0",
     "axios": "^0.21.4",
     "babel-loader": "^8.2.2",
     "compression": "^1.7.4",
